[package]
name = "commit-calculator"
version = "0.1.0"
authors = ["bruno"]
edition = "2018"

[dependencies]
rand = "0.6.5"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
uuid = { version="0.8", features = ["serde", "v4"] }
openssl = "0.10.29"
base64 = "0.12.0"
reqwest = { version="0.10", features = ["blocking", "json"] }
hyper = "0.13.5"
jsonwebtoken = "7.1.0"